@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          require File::Install::ShareDir if needed for Makefile.PL share
 
 1.100130  2010-01-13 08:18:29 America/New_York
           the args used in generated Build.PL or Makefile.PL are now mostly
